--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
+    "expo-app-loading": "^2.1.1",
+    "expo-image-picker": "^14.5.0",
+    "expo-location": "^16.3.0",
+    "expo-sqlite": "^11.6.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-maps": "^1.8.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0"
   },
